--- a/index.html
+++ b/index.html
@@ -32,6 +32,7 @@
             <div class="stats">
                 <p class="stater">Parties jouées : <a id="totalGames">N/A</a></p>
                 <p class="stater">Parties gagnées : <a id="totalWins">N/A</a></p>
+                <p class="stater">Parties à égalité : <a id="totalEquality">N/A</a></p>
             </div>
         </footer>
         <script src="./js/game.js"></script>
