--- a/index.html
+++ b/index.html
@@ -33,6 +33,7 @@
                 <p class="stater">Parties jouées : <a id="totalGames">N/A</a></p>
                 <p class="stater">Parties gagnées : <a id="totalWins">N/A</a></p>
                 <p class="stater">Parties à égalité : <a id="totalEquality">N/A</a></p>
+                <p class="stater">Parties perdues : <a id="totalLost">N/A</a></p>
             </div>
         </footer>
         <script src="./js/game.js"></script>
